--- a/Caddyfile
+++ b/Caddyfile
@@ -1,6 +1,6 @@
-www.chefhub.pw {
-    gzip
-    proxy / localhost:3000 {
-        transparent
-    }
+chefhub.pw {
+  gzip
+  proxy / localhost:3000 {
+    transparent
+  }
 }
